# step-perf

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
scripts/: cargo_test.sh  compute_allocation.py  extract_log.sh  gantt_chart.sh  gantt_chart_generator.py  matmul.py  mongodb_script.sh  permission.sh  python_path.sh  python_path_zgh.sh
scripts/deepseekv3/: README.md  moe_v0.py  utils.py
scripts/old_modeling/: extract_comp_csv.sh  extract_hbm_load_csv.sh  extract_hbm_store_csv.sh  gantt_chart.sh  gantt_chart_generator.py
scripts/tests/: test_indices_gen.py  test_moe_v0_exec.py  test_moe_v0_match.py
src/: lib.rs
src/build_sim/: channel.rs
src/functions/: accum_fn.rs  map_accum_fn.rs  map_fn.rs  mod.rs
src/memory/: dyn_offchip_load.rs  hdl_mod.rs  metadata_gen.rs  mod.rs  offchip_load.rs  offchip_store.rs  random_offchip_load.rs  random_offchip_store.rs
src/operator/: accum.rs  broadcast.rs  bufferize.rs  dynstreamify.rs  eager_merge.rs  expand.rs  flatmap.rs  flatten.rs  map.rs  map_accum.rs  mod.rs  parallelize.rs  partition.rs  promote.rs  reassemble.rs  repeat.rs  reshape.rs  streamify.rs
src/primitives/: buffer.rs  elem.rs  mod.rs  select.rs  tile.rs
src/proto_driver/: configs.rs  mod.rs  proto_headers.rs
src/ramulator/: hbm_context.rs
src/test/: mod.rs  protobuf_test.rs  test_hbm_context.rs  test_simple_timing.rs
src/utils/: calculation.rs  cast.rs  events.rs  mod.rs  select_npy.rs
