[package]
name = "step_perf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "step_perf"
crate-type = ["cdylib", "lib"]

[dependencies]
dam = { git = "https://github.com/stanford-ppl/DAM-RS.git", branch = "master", default-features = false, features = [
    "coroutines",
    "log-mongo",
    "dot",
] }
frunk = "0.4.2"
graphviz-rust = { version = "0.6.6", optional = true }
csv = "1.2"
serde = { version = "1.0", features = ["derive"] }
linkme = "0.3.32"
derive_more = { version = "2.0.1", features = ["full"] }
half = { version = "2.6.0", features = ["num-traits"] }
num = "0.4.3"
fxhash = "0.2.1"
enum_dispatch = "0.3.13"
num-bigint = "0.4.6"
ndarray = "0.16.1"
thiserror = "2.0.12"
npyz = "0.8.4"
serde_json = "1.0.140"
pyo3 = "0.25.0"
prost = "0.13.5"
protobuf = "3.7.2"
itertools = "0.14.0"
num-traits = "0.2.19"

[build-dependencies]
prost-build = "0.11"

[features]
default = ["dot"]
dot = ["dep:graphviz-rust"]
